[package]
name = "nbd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "bin/server-test.rs"

[dependencies]

num_enum = "0.7"
futures = "0.3"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
